--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,23 @@
 #root{
     background-color: black;
 }/* full page background color is black*/
-.App-header{
+.NavBar{
     display: flex;
     justify-content: space-between;   
     margin: 0 1% 1% 1%;
 }
 .LogoAndText{
     display: flex;
-    width: 15%;
+    width: 14%;
     color: #A7A1E8;;
     justify-content: space-between;
 }
-.App-header h1{
-    color: white;
+.NavBar h1{
+    color: #A7A1E8;
+    font-weight: bold;
     font-size: 2em;
 }
-.App-header h3{
+.NavBar h3{
     color: white;
     font-size: 1.5em;
 }
@@ -42,7 +43,7 @@
     color: white;
     background-image: url('./image4.png'),url('image5.png');
     background-repeat: no-repeat;
-    background-size: auto,contain;
+    background-size: 30%,contain;
     background-position: 10%,85%;
 }
 .HeroText .HeroText1{
