--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,13 @@
-#root{
+*{
     background-color: black;
-}/* full page background color is black*/
+}
 .NavBar{
     display: flex;
     justify-content: space-between;   
     margin: 0 1% 1% 1%;
+}
+.HeroSection{
+    position: relative;
 }
 .LogoAndText{
     display: flex;
@@ -79,8 +82,14 @@
     font-size: 20px;
 }/*need to make the arrow bold idk how */
 
-.ConnectTeamUpCollaborate{
-    position: relative;
-    color: white;
-    box-sizing: border-box;
+.ConnectTeamUpCollaborate {
+    position: absolute;
+    display: flex;
+    background-image: url('./image8.png');
+    background-position: 0;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    color: #A79FFF;
+    margin-top: 10em;
+    padding: 10%;
 }
