--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,7 +87,63 @@
     height: 15%;
     width: 15%;
 }
-.Globe{
+.GlobeAnimation{
     display: flex;
-    color: white;
+    margin-top: 20%;
+    justify-content: center;
+    align-items: center;
 }
+.SpinningGlobe{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index:-1;
+}
+.GlobeText{
+    z-index: 1;
+    position: relative;
+    color: white;
+    margin-bottom: 20%;
+    margin-left: -10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    font-size: 1.5em Gilroy;
+    background-color: rgba(91, 86, 145, 0.3);
+    width: fit-content;
+    padding: 2% 7%;
+    backdrop-filter: saturate(180%) blur(10px);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.8px);
+    -webkit-backdrop-filter: blur(9.8px);
+    border: 1px solid rgba(255, 255, 255, 0.37);
+}
+.GlobeText2{
+    z-index: 1;
+    position: relative;
+    color: white;
+    margin-top: -15%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    font-size: 1.5em Gilroy;
+    background-color: rgba(91, 86, 145, 0.3);
+    width: fit-content;
+    padding: 2% 7%;
+    backdrop-filter: saturate(180%) blur(10px);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.8px);
+    -webkit-backdrop-filter: blur(9.8px);
+    border: 1px solid rgba(255, 255, 255, 0.37);
+}
+.GlobeText p{
+    background-color:transparent
+}
+.GlobeText2 p{
+    background-color:transparent
+}
+
