--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,149 +1,7 @@
 *{
     background-color: black;
 }
-.NavBar{
+App{
     display: flex;
-    justify-content: space-between;   
-    margin: 0 1% 1% 1%;
+    flex-direction: column;;
 }
-.HeroSection{
-    position: relative;
-}
-.LogoAndText{
-    display: flex;
-    width: 14%;
-    color: #A7A1E8;;
-    justify-content: space-between;
-}
-.NavBar h1{
-    color: #A7A1E8;
-    font-weight: bold;
-    font-size: 2em;
-}
-.NavBar h3{
-    color: white;
-    font-size: 1.5em;
-}
-.three-on-top{
-    display: flex;
-    width: 30%;
-    justify-content: space-between;
-}
-.three-on-top h3{
-    color: gray;
-}
-.contact-button{
-    background-color: #302D50;
-    color: white;
-    padding: 8px 20px;
-    border-radius: 27px;
-}
-.HeroText{
-    display: flex;
-    margin-top: 10%;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    background-image: url('./image4.png'),url('image5.png');
-    background-repeat: no-repeat;
-    background-size: 30%,contain;
-    background-position: 10%,85%;
-}
-.HeroText .HeroText1{
-    color: #A9A9A9;
-    font-size: 3em;
-}
-.HeroText .HeroText2{
-    color:white;
-    font-size: 3em;
-    margin-bottom: 4%;
-}
-.HeroText .HeroText3{
-    background-color: #A79FFF;
-    color: black;
-    font-size: 2em;
-    font-weight: bold;
-    padding: 8px 20px;
-    border-radius: 27px;
-    margin-bottom: 2%;
-}
-.ScrollDownText{
-    display: flex;
-    color: #888888;
-    margin-top: 5%;
-    font-size: 1em;
-    background-color:black;
-    border: 1px solid #888888;
-    padding: 8px 20px;
-    border-radius: 27px;
-}
-.material-symbols-outlined{
-    color: white;
-    font-size: 20px;
-}/*need to make the arrow bold idk how */
-
-.ConnectTeamUpCollaborate {
-    position: absolute;
-    height: 15%;
-    width: 15%;
-}
-.GlobeAnimation{
-    display: flex;
-    margin-top: 20%;
-    justify-content: center;
-    align-items: center;
-}
-.SpinningGlobe{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index:-1;
-}
-.GlobeText{
-    z-index: 1;
-    position: relative;
-    color: white;
-    margin-bottom: 20%;
-    margin-left: -10%;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    font-size: 1.5em Gilroy;
-    background-color: rgba(91, 86, 145, 0.3);
-    width: fit-content;
-    padding: 2% 7%;
-    backdrop-filter: saturate(180%) blur(10px);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5.8px);
-    -webkit-backdrop-filter: blur(9.8px);
-    border: 1px solid rgba(255, 255, 255, 0.37);
-}
-.GlobeText2{
-    z-index: 1;
-    position: relative;
-    color: white;
-    margin-top: -15%;
-    margin-left: 10%;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    font-size: 1.5em Gilroy;
-    background-color: rgba(91, 86, 145, 0.3);
-    width: fit-content;
-    padding: 2% 7%;
-    backdrop-filter: saturate(180%) blur(10px);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5.8px);
-    -webkit-backdrop-filter: blur(9.8px);
-    border: 1px solid rgba(255, 255, 255, 0.37);
-}
-.GlobeText p{
-    background-color:transparent
-}
-.GlobeText2 p{
-    background-color:transparent
-}
-
