--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -4,16 +4,10 @@
 .NavBar{
     display: flex;
     justify-content: space-between;   
-    margin: 0 1% 1% 1%;
+    align-items: center;
 }
 .HeroSection{
     position: relative;
-}
-.LogoAndText{
-    display: flex;
-    width: 14%;
-    color: #A7A1E8;;
-    justify-content: space-between;
 }
 .NavBar h1{
     color: #A7A1E8;
@@ -32,9 +26,10 @@
 .three-on-top h3{
     color: gray;
 }
-.contact-button{
+.ContactButton{
     background-color: #302D50;
     color: white;
+    font-size: 1em;
     padding: 8px 20px;
     border-radius: 27px;
 }
@@ -44,7 +39,7 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    background-image: url('./image4.png'),url('image5.png');
+    background-image: url('./image4.png'),url('./image5.png');
     background-repeat: no-repeat;
     background-size: 30%,contain;
     background-position: 10%,85%;
