--- a/client/src/components/SocialMedia.css
+++ b/client/src/components/SocialMedia.css
@@ -26,7 +26,11 @@
   font-size: 2rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1024px) {
+  .TD{
+    display: flex;
+    flex-direction: column;
+  }
   .TD a svg {
     font-size: 1.5rem;
   }
